y.output
Terminaux inutilisés dans la grammaire

   tPTF
   tINF
   tSUP
   tINFEG
   tSUPEG
   tERR


Grammaire

    0 $accept: start $end

    1 start: Code

    2 Code: tINT tMAIN tPARO tPARF Body

    3 Body: tACCO Instructions tACCF

    4 Instructions: Instruction Instructions
    5             | %empty

    6 Instruction: Declaration tPV
    7            | Affectation tPV

    8 Declaration: DConst
    9            | DInt

   10 DConst: tCONST tINT DConstSuite DConstSuite2

   11 DConstSuite: tID tEGAL tNB

   12 DConstSuite2: tVIRG DConstSuite DConstSuite2
   13             | %empty

   14 DInt: tINT DIntSuite DIntSuite2

   15 DIntSuite: tID
   16          | tID tEGAL tNB

   17 DIntSuite2: tVIRG DIntSuite DIntSuite2
   18           | %empty

   19 Affectation: tID tEGAL E

   20 E: E tPLUS E
   21  | E tMOINS E
   22  | E tMUL E
   23  | E tDIV E
   24  | tMOINS E
   25  | tNB
   26  | tID


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 2
tACCO (259) 3
tACCF (260) 3
tCONST (261) 10
tINT (262) 2 10 14
tID (263) 11 15 16 19 26
tNB (264) 11 16 25
tPTF (265)
tPLUS (266) 20
tMOINS (267) 21 24
tMUL (268) 22
tDIV (269) 23
tEGAL (270) 11 16 19
tINF (271)
tSUP (272)
tINFEG (273)
tSUPEG (274)
tPARO (275) 2
tPARF (276) 2
tVIRG (277) 12 17
tPV (278) 6 7
tERR (279)


Non-terminaux, suivis des règles où ils apparaissent

$accept (25)
    à gauche: 0
start (26)
    à gauche: 1, à droite: 0
Code (27)
    à gauche: 2, à droite: 1
Body (28)
    à gauche: 3, à droite: 2
Instructions (29)
    à gauche: 4 5, à droite: 3 4
Instruction (30)
    à gauche: 6 7, à droite: 4
Declaration (31)
    à gauche: 8 9, à droite: 6
DConst (32)
    à gauche: 10, à droite: 8
DConstSuite (33)
    à gauche: 11, à droite: 10 12
DConstSuite2 (34)
    à gauche: 12 13, à droite: 10 12
DInt (35)
    à gauche: 14, à droite: 9
DIntSuite (36)
    à gauche: 15 16, à droite: 14 17
DIntSuite2 (37)
    à gauche: 17 18, à droite: 14 17
Affectation (38)
    à gauche: 19, à droite: 7
E (39)
    à gauche: 20 21 22 23 24 25 26, à droite: 19 20 21 22 23 24


État 0

    0 $accept: . start $end

    tINT  décalage et aller à l'état 1

    start  aller à l'état 2
    Code   aller à l'état 3


État 1

    2 Code: tINT . tMAIN tPARO tPARF Body

    tMAIN  décalage et aller à l'état 4


État 2

    0 $accept: start . $end

    $end  décalage et aller à l'état 5


État 3

    1 start: Code .

    $défaut  réduction par utilisation de la règle 1 (start)


État 4

    2 Code: tINT tMAIN . tPARO tPARF Body

    tPARO  décalage et aller à l'état 6


État 5

    0 $accept: start $end .

    $défaut  accepter


État 6

    2 Code: tINT tMAIN tPARO . tPARF Body

    tPARF  décalage et aller à l'état 7


État 7

    2 Code: tINT tMAIN tPARO tPARF . Body

    tACCO  décalage et aller à l'état 8

    Body  aller à l'état 9


État 8

    3 Body: tACCO . Instructions tACCF

    tCONST  décalage et aller à l'état 10
    tINT    décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 5 (Instructions)

    Instructions  aller à l'état 13
    Instruction   aller à l'état 14
    Declaration   aller à l'état 15
    DConst        aller à l'état 16
    DInt          aller à l'état 17
    Affectation   aller à l'état 18


État 9

    2 Code: tINT tMAIN tPARO tPARF Body .

    $défaut  réduction par utilisation de la règle 2 (Code)


État 10

   10 DConst: tCONST . tINT DConstSuite DConstSuite2

    tINT  décalage et aller à l'état 19


État 11

   14 DInt: tINT . DIntSuite DIntSuite2

    tID  décalage et aller à l'état 20

    DIntSuite  aller à l'état 21


État 12

   19 Affectation: tID . tEGAL E

    tEGAL  décalage et aller à l'état 22


État 13

    3 Body: tACCO Instructions . tACCF

    tACCF  décalage et aller à l'état 23


État 14

    4 Instructions: Instruction . Instructions

    tCONST  décalage et aller à l'état 10
    tINT    décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 5 (Instructions)

    Instructions  aller à l'état 24
    Instruction   aller à l'état 14
    Declaration   aller à l'état 15
    DConst        aller à l'état 16
    DInt          aller à l'état 17
    Affectation   aller à l'état 18


État 15

    6 Instruction: Declaration . tPV

    tPV  décalage et aller à l'état 25


État 16

    8 Declaration: DConst .

    $défaut  réduction par utilisation de la règle 8 (Declaration)


État 17

    9 Declaration: DInt .

    $défaut  réduction par utilisation de la règle 9 (Declaration)


État 18

    7 Instruction: Affectation . tPV

    tPV  décalage et aller à l'état 26


État 19

   10 DConst: tCONST tINT . DConstSuite DConstSuite2

    tID  décalage et aller à l'état 27

    DConstSuite  aller à l'état 28


État 20

   15 DIntSuite: tID .
   16          | tID . tEGAL tNB

    tEGAL  décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 15 (DIntSuite)


État 21

   14 DInt: tINT DIntSuite . DIntSuite2

    tVIRG  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 18 (DIntSuite2)

    DIntSuite2  aller à l'état 31


État 22

   19 Affectation: tID tEGAL . E

    tID     décalage et aller à l'état 32
    tNB     décalage et aller à l'état 33
    tMOINS  décalage et aller à l'état 34

    E  aller à l'état 35


État 23

    3 Body: tACCO Instructions tACCF .

    $défaut  réduction par utilisation de la règle 3 (Body)


État 24

    4 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 4 (Instructions)


État 25

    6 Instruction: Declaration tPV .

    $défaut  réduction par utilisation de la règle 6 (Instruction)


État 26

    7 Instruction: Affectation tPV .

    $défaut  réduction par utilisation de la règle 7 (Instruction)


État 27

   11 DConstSuite: tID . tEGAL tNB

    tEGAL  décalage et aller à l'état 36


État 28

   10 DConst: tCONST tINT DConstSuite . DConstSuite2

    tVIRG  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 13 (DConstSuite2)

    DConstSuite2  aller à l'état 38


État 29

   16 DIntSuite: tID tEGAL . tNB

    tNB  décalage et aller à l'état 39


État 30

   17 DIntSuite2: tVIRG . DIntSuite DIntSuite2

    tID  décalage et aller à l'état 20

    DIntSuite  aller à l'état 40


État 31

   14 DInt: tINT DIntSuite DIntSuite2 .

    $défaut  réduction par utilisation de la règle 14 (DInt)


État 32

   26 E: tID .

    $défaut  réduction par utilisation de la règle 26 (E)


État 33

   25 E: tNB .

    $défaut  réduction par utilisation de la règle 25 (E)


État 34

   24 E: tMOINS . E

    tID     décalage et aller à l'état 32
    tNB     décalage et aller à l'état 33
    tMOINS  décalage et aller à l'état 34

    E  aller à l'état 41


État 35

   19 Affectation: tID tEGAL E .
   20 E: E . tPLUS E
   21  | E . tMOINS E
   22  | E . tMUL E
   23  | E . tDIV E

    tPLUS   décalage et aller à l'état 42
    tMOINS  décalage et aller à l'état 43
    tMUL    décalage et aller à l'état 44
    tDIV    décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 19 (Affectation)


État 36

   11 DConstSuite: tID tEGAL . tNB

    tNB  décalage et aller à l'état 46


État 37

   12 DConstSuite2: tVIRG . DConstSuite DConstSuite2

    tID  décalage et aller à l'état 27

    DConstSuite  aller à l'état 47


État 38

   10 DConst: tCONST tINT DConstSuite DConstSuite2 .

    $défaut  réduction par utilisation de la règle 10 (DConst)


État 39

   16 DIntSuite: tID tEGAL tNB .

    $défaut  réduction par utilisation de la règle 16 (DIntSuite)


État 40

   17 DIntSuite2: tVIRG DIntSuite . DIntSuite2

    tVIRG  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 18 (DIntSuite2)

    DIntSuite2  aller à l'état 48


État 41

   20 E: E . tPLUS E
   21  | E . tMOINS E
   22  | E . tMUL E
   23  | E . tDIV E
   24  | tMOINS E .

    tMUL  décalage et aller à l'état 44
    tDIV  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 24 (E)


État 42

   20 E: E tPLUS . E

    tID     décalage et aller à l'état 32
    tNB     décalage et aller à l'état 33
    tMOINS  décalage et aller à l'état 34

    E  aller à l'état 49


État 43

   21 E: E tMOINS . E

    tID     décalage et aller à l'état 32
    tNB     décalage et aller à l'état 33
    tMOINS  décalage et aller à l'état 34

    E  aller à l'état 50


État 44

   22 E: E tMUL . E

    tID     décalage et aller à l'état 32
    tNB     décalage et aller à l'état 33
    tMOINS  décalage et aller à l'état 34

    E  aller à l'état 51


État 45

   23 E: E tDIV . E

    tID     décalage et aller à l'état 32
    tNB     décalage et aller à l'état 33
    tMOINS  décalage et aller à l'état 34

    E  aller à l'état 52


État 46

   11 DConstSuite: tID tEGAL tNB .

    $défaut  réduction par utilisation de la règle 11 (DConstSuite)


État 47

   12 DConstSuite2: tVIRG DConstSuite . DConstSuite2

    tVIRG  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 13 (DConstSuite2)

    DConstSuite2  aller à l'état 53


État 48

   17 DIntSuite2: tVIRG DIntSuite DIntSuite2 .

    $défaut  réduction par utilisation de la règle 17 (DIntSuite2)


État 49

   20 E: E . tPLUS E
   20  | E tPLUS E .
   21  | E . tMOINS E
   22  | E . tMUL E
   23  | E . tDIV E

    tMUL  décalage et aller à l'état 44
    tDIV  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 20 (E)


État 50

   20 E: E . tPLUS E
   21  | E . tMOINS E
   21  | E tMOINS E .
   22  | E . tMUL E
   23  | E . tDIV E

    tMUL  décalage et aller à l'état 44
    tDIV  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 21 (E)


État 51

   20 E: E . tPLUS E
   21  | E . tMOINS E
   22  | E . tMUL E
   22  | E tMUL E .
   23  | E . tDIV E

    $défaut  réduction par utilisation de la règle 22 (E)


État 52

   20 E: E . tPLUS E
   21  | E . tMOINS E
   22  | E . tMUL E
   23  | E . tDIV E
   23  | E tDIV E .

    $défaut  réduction par utilisation de la règle 23 (E)


État 53

   12 DConstSuite2: tVIRG DConstSuite DConstSuite2 .

    $défaut  réduction par utilisation de la règle 12 (DConstSuite2)
